apps/couchpotato/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchpotato
  labels:
    app: couchpotato
    version: v0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchpotato
      version: v0
  template:
    metadata:
      labels:
        app: couchpotato
        version: v0
    spec:
      containers:
      - name: couchpotato
        image: linuxserver/couchpotato
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
        ports:
        - containerPort: 5050
          name: couchpotato
        volumeMounts:
        - name: couchpotato-config
          mountPath: /config
        - name: couchpotato-download
          mountPath: /mnt
        - name: couchpotato-movies
          mountPath: /movies
        imagePullPolicy: Always
      volumes:
      - name: couchpotato-config
        persistentVolumeClaim:
          claimName: couchpotato-config
      - name: couchpotato-download
        persistentVolumeClaim:
          claimName: sabnzbd-download
      - name: couchpotato-movies
        persistentVolumeClaim:
          claimName: lib-movies
